--- a/nd4j-backends/nd4j-tests/pom.xml
+++ b/nd4j-backends/nd4j-tests/pom.xml
@@ -81,7 +81,7 @@
 
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-cuda-7.5</artifactId>
+            <artifactId>nd4j-native</artifactId>
             <version>${project.version}</version>
 
         </dependency>
