Let cuDNN run on host memory when out of device memory, instead of failing
Former-commit-id: ebc035ba90420512b733a521f32201262cbad4db

--- a/deeplearning4j-cuda/pom.xml
+++ b/deeplearning4j-cuda/pom.xml
@@ -12,4 +12,8 @@
     <artifactId>deeplearning4j-cuda</artifactId>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>deeplearning4j-cuda-7.5</module>
+    </modules>
+
 </project>
