--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/linux-x86_64-nd4j.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/linux-x86_64-nd4j.properties
@@ -21,4 +21,4 @@ platform.framework=
 platform.library.prefix=lib
 platform.library.suffix=.so
 platform.preloadpath=/usr/lib64/:/usr/lib/
-platform.preload=iomp5:mkl_avx:mkl_avx2:mkl_def:mkl_mc3:mkl_core:mkl_gnu_thread:mkl_intel_lp64:mkl_intel_thread:mkl_rt:mkl_rt#openblas@.0:gomp@.1:quadmath@.0:gfortran@.3:openblas@.0:blas@.3#openblas@.0:blas@.3
+platform.preload=iomp5:mkl_avx:mkl_avx2:mkl_avx512_mic:mkl_def:mkl_mc3:mkl_core:mkl_gnu_thread:mkl_intel_lp64:mkl_intel_thread:mkl_rt:mkl_rt#openblas@.0:gomp@.1:quadmath@.0:gfortran@.3:openblas@.0:blas@.3#openblas@.0:blas@.3
