--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/windows-x86_64-nd4j.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/windows-x86_64-nd4j.properties
@@ -13,7 +13,7 @@ platform.linkpath.prefix=-L
 platform.linkpath=
 platform.link.prefix=-l
 platform.link.suffix=
-platform.link=
+platform.link=psapi#
 platform.framework.prefix=-F
 platform.framework.suffix=
 platform.framework=
