fix for VPTree multithreading
Former-commit-id: fc7ef9cb84920701997d6a5a04f37b53b89a1912

--- a/deeplearning4j-core/pom.xml
+++ b/deeplearning4j-core/pom.xml
@@ -117,7 +117,7 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native</artifactId>
+            <artifactId>nd4j-cuda-7.5</artifactId>
         </dependency>
 
         <dependency>
