--- a/deeplearning4j-cuda/deeplearning4j-cuda-7.5/pom.xml
+++ b/deeplearning4j-cuda/deeplearning4j-cuda-7.5/pom.xml
@@ -105,7 +105,7 @@
     </dependencies>
 
     <build>
-        <testSourceDirectory>../deeplearning4j-core/src/test/java</testSourceDirectory>
+        <testSourceDirectory>../../deeplearning4j-core/src/test/java</testSourceDirectory>
         <pluginManagement>
             <plugins>
                 <plugin>
