--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.deeplearning4s</groupId>
-  <artifactId>deeplearning4s</artifactId>
+  <groupId>org.deeplearning4j</groupId>
+  <artifactId>deeplearning4s_2.10</artifactId>
   <version>0.5.1-SNAPSHOT</version>
   <properties>
     <scala.binary.version>2.11</scala.binary.version>
