--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 
 
     <properties>
-        <nd4j.version>0.5.1-SNAPSHOT</nd4j.version>
-        <datavec.version>0.5.1-SNAPSHOT</datavec.version>
+        <nd4j.version>${project.version}</nd4j.version>
+        <datavec.version>${project.version}</datavec.version>
         <commonsmath.version>3.4.1</commonsmath.version>
         <commonslang.version>3.3.1</commonslang.version>
         <commonsio.version>2.4</commonsio.version>
@@ -378,6 +378,7 @@
                     <!--                    <configuration>
                                             <argLine>-Ddtype=double -Xmx3024m -Xms3024m</argLine>
                                         </configuration> -->
+
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
