--- a/deeplearning4j-cuda/deeplearning4j-cuda-7.5/pom.xml
+++ b/deeplearning4j-cuda/deeplearning4j-cuda-7.5/pom.xml
@@ -51,6 +51,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
