Give types to pointer parameters

--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/windows-x86_64-nd4j.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/org/bytedeco/javacpp/properties/windows-x86_64-nd4j.properties
@@ -20,4 +20,4 @@ platform.framework=
 platform.library.prefix=
 platform.library.suffix=.dll
 platform.preloadpath=C:/msys64/mingw64/bin/
-platform.preload=iomp5md;mkl_avx;mkl_avx2;mkl_avx512_mic;mkl_def;mkl_mc3;mkl_core;mkl_gnu_thread;mkl_intel_lp64;mkl_intel_thread;mkl_rt;mkl_rt#libopenblas;libwinpthread-1;libgcc_s_seh-1;libgomp-1;libstdc++-6;libquadmath-0;libgfortran-3;libopenblas;libblas3#libopenblas;libblas3;libnd4j
+platform.preload=libiomp5md;mkl_avx;mkl_avx2;mkl_avx512_mic;mkl_def;mkl_mc3;mkl_core;mkl_gnu_thread;mkl_intel_lp64;mkl_intel_thread;mkl_rt;mkl_rt#libopenblas;libwinpthread-1;libgcc_s_seh-1;libgomp-1;libstdc++-6;libquadmath-0;libgfortran-3;libopenblas;libblas3#libopenblas;libblas3;libnd4j
