--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -126,11 +126,15 @@ elseif(CPU_BLAS)
     FIND_PACKAGE(MKL)
     if(MKL_FOUND)
         message("USING MKL")
+        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__MKL")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__MKL")
         target_link_libraries(nd4j ${MKL_LIBRARIES})
     else()
         find_package(OpenBLAS)
         if(OpenBLAS_FOUND)
             message("USING OPENBLAS")
+            set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__OPENBLAS")
+            set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__OPENBLAS")
             target_link_libraries(nd4j ${OpenBLAS_LIB})
         else()
             FIND_PACKAGE(BLAS)
