--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,13 @@
         <dl4j.version>0.5.1-SNAPSHOT</dl4j.version>
         <nd4j.version>0.5.1-SNAPSHOT</nd4j.version>
         <datavec.version>0.5.1-SNAPSHOT</datavec.version>
-        <commons.math.version>3.6.1</commons.math.version>
-        <commons.lang.version>3.4</commons.lang.version>
-        <commons.io.version>1.3.2</commons.io.version>
+        <commons.math.version>3.4.1</commons.math.version>
+        <commons.lang.version>3.3.1</commons.lang.version>
+        <commons.io.version>2.4</commons.io.version>
         <lombok.version>1.16.8</lombok.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.21</slf4j.version>
+        <logback.version>1.1.2</logback.version>
         <arg4j.version>2.33</arg4j.version>
         <guava.version>19.0</guava.version>
         <jackson.version>2.5.1</jackson.version>
