--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <scala.version>2.11.8</scala.version>
     <nd4j.version>0.5.1-SNAPSHOT</nd4j.version>
     <dl4j.version>0.5.1-SNAPSHOT</dl4j.version>
-    <slf4j.version>1.7.21</slf4j.version>
+    <slf4j.version>1.7.12</slf4j.version>
+    <logback.version>1.1.2</logback.version>
   </properties>
 
   <repositories>
@@ -48,6 +49,16 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
     </dependency>
   </dependencies>
 
