--- a/nd4j-jdbc/nd4j-jdbc-mysql/pom.xml
+++ b/nd4j-jdbc/nd4j-jdbc-mysql/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.nd4j</groupId>
         <artifactId>nd4j-jdbc</artifactId>
-        <version>0.6.0</version>
+        <version>0.6.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>nd4j-jdbc-mysql</artifactId>
