Update to version 0.6.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <packaging>pom</packaging>
 
-    <version>0.6.0</version>
+    <version>0.6.1-SNAPSHOT</version>
     <modules>
         <module>datavec-api</module>
         <module>datavec-data</module>
@@ -53,7 +53,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.7</slf4j.version>
-        <nd4j.version>0.6.0</nd4j.version>
+        <nd4j.version>0.6.1-SNAPSHOT</nd4j.version>
         <junit.version>4.12</junit.version>
         <jackson.version>2.4.4</jackson.version>    <!-- To match spark -->
         <commons-compress.version>1.8.1</commons-compress.version>
