--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -126,8 +126,8 @@ elseif(CPU_BLAS)
     FIND_PACKAGE(MKL)
     if(MKL_FOUND)
         message("USING MKL")
-        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__MKL")
-        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__MKL")
+        set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__MKL -lsvml")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__MKL -lsvml")
         target_link_libraries(nd4j ${MKL_LIBRARIES})
     else()
         find_package(OpenBLAS)
