--- a/datavec-api/pom.xml
+++ b/datavec-api/pom.xml
@@ -113,6 +113,13 @@
             <version>3.2.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
