--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <lombok.version>1.16.6</lombok.version>
         <jodatime.version>2.9.2</jodatime.version>
         <freemarker.version>2.3.23</freemarker.version>
+        <logback.version>1.1.2</logback.version>
     </properties>
 
     <distributionManagement>
